ios/fullstory_flutter/shared_flutter.xcframework/ios-arm64_x86_64-simulator/Headers/shared_flutter.h

enum BlockType {
  Excluded,
  Masked,
  Recorded,
  Omitted,
  Unmatched,
};
typedef uint32_t BlockType;
typedef struct BlockRulesHandle {
  uint8_t _priv[0];
} BlockRulesHandle;
typedef struct ByteArray {
  uint8_t *ptr;
  uintptr_t len;
  uintptr_t capacity;
  bool finalized;
  bool delegated;
} ByteArray;
typedef struct KeepRulesHandle {
  uint8_t _priv[0];
} KeepRulesHandle;
typedef struct BlockResult {
  BlockType block_type;
  char *error;
  char *matched_selector;
} BlockResult;
typedef struct SelectorAttributes {
  const char *tag;
  const char *const *classes;
  uintptr_t classes_len;
  const char *const *attr_names;
  const char *const *attr_values;
  uintptr_t attrs_len;
} SelectorAttributes;
typedef struct KeepResult {
  bool matched;
  char *error;
  char *matched_selector;
} KeepResult;
typedef struct DrawingHandle {
  uint8_t _priv[0];
} DrawingHandle;
typedef struct InProgressDataHandle {
  uint8_t _priv[0];
} InProgressDataHandle;