lib/src/shared_flutter_bindings_generated.dart


final class BlockRulesHandle extends ffi.Opaque {}

final class ByteArray extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.UintPtr()
  external int len;

  @ffi.UintPtr()
  external int capacity;

  @ffi.Bool()
  external bool finalized;

  @ffi.Bool()
  external bool delegated;
}

final class KeepRulesHandle extends ffi.Opaque {}






final class BlockResult extends ffi.Struct {
  @ffi.Uint32()
  external int block_type;

  external ffi.Pointer<ffi.Char> error;

  external ffi.Pointer<ffi.Char> matched_selector;
}




final class SelectorAttributes extends ffi.Struct {
  external ffi.Pointer<ffi.Char> tag;

  external ffi.Pointer<ffi.Pointer<ffi.Char>> classes;

  @ffi.UintPtr()
  external int classes_len;

  external ffi.Pointer<ffi.Pointer<ffi.Char>> attr_names;

  external ffi.Pointer<ffi.Pointer<ffi.Char>> attr_values;

  @ffi.UintPtr()
  external int attrs_len;
}






final class KeepResult extends ffi.Struct {
  @ffi.Bool()
  external bool matched;

  external ffi.Pointer<ffi.Char> error;

  external ffi.Pointer<ffi.Char> matched_selector;
}
final class DrawingHandle extends ffi.Opaque {}
final class InProgressDataHandle extends ffi.Opaque {}
